--- a/index.html
+++ b/index.html
@@ -3,20 +3,12 @@
 <head>
     <meta charset="UTF-8"/>
     <title></title>
-    <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Pacifico"/>
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:400:700:900" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/styles.css"/>
     <script>function fileChooser() {
         let file = "daysViews/day" + Difference_In_Days + ".html";
         window.location = file;
     }
-
-    document.documentElement.className = "js";
-    const supportsCssVars = function () {
-        let e, t = document.createElement("style");
-        return t.innerHTML = "root: { --tmp-var: bold; }", document.head.appendChild(t), e = !!(window.CSS && window.CSS.supports && window.CSS.supports("font-weight", "var(--tmp-var)")), t.parentNode.removeChild(t), e
-    };
-    supportsCssVars() || alert("Please view this in a modern browser that supports CSS Variables.");</script>
+    </script>
     <script src="js/anime.min.js"></script>
 </head>
 <body>
@@ -48,17 +40,6 @@
 </html>
 
 <script>
-    // var textWrapper = document.querySelector('.ml16');
-    // textWrapper.innerHTML = textWrapper.textContent.replace(/\S/g, "<span class='letter'>$&</span>");
-    //
-    // anime.timeline({loop: false})
-    //     .add({
-    //         targets: '.ml16 .letter',
-    //         translateY: [-100,0],
-    //         easing: "easeOutExpo",
-    //         duration: 1400,
-    //         delay: (el, i) => 30 * i
-    //     });
     let date1 = new Date("10/22/2022");
     let date2 = new Date();
     const Difference_In_Time = date2.getTime() - date1.getTime();
